# agent-openai

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  mcp.json.example  pyproject.toml
.claude/logs/: session-20260629-28d4bb60.md  session-20260629-c0c2d2ba.md  session-20260630-07b93927.md  session-20260630-1a5957cd.md  session-20260630-5527e0e5.md  session-20260630-8c1603d6.md  session-20260630-c0c2d2ba.md  session-20260630-fa801384.md  session-20260701-f35c6ee2.md
docs/: openai-agents-sdk-file-map.md
lumen/: __init__.py  app.py  config.py  logging_setup.py  workspace.py
lumen/agent/: __init__.py  factory.py  guardrails.py  runner.py  sdk_traces.py  sessions.py  traces.py
lumen/mcp/: __init__.py
lumen/server/: __init__.py  api.py  app_state.py  schemas.py
lumen/tools/: __init__.py  _format.py  data_tools.py  document_tools.py  fs_tools.py  pptx_tools.py  registry.py  shell_tools.py
lumen/web/: index.html  styles.css
lumen/web/js/: api.js  app.js  markdown.js  ui.js
tests/: test_settings_store.py  test_smoke.py
